[tool.poetry]
name = "python-roman-numerals"
version = "0.1.0"
description = ""
authors = ["MattW <mattnwarnock@yahoo.co.uk>"]
readme = "README.md"
packages = [{include = "python_roman_numerals"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
